Refactor index.html with styles and structure updates
Updated the HTML structure and added CSS styles for layout and design.

--- a/index.html
+++ b/index.html
@@ -1,70 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Free Matic Mining</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<title>Free Matic Mining</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(180deg, #5a189a, #7b2cbf);
+  color: white;
+}
+
+/* HEADER */
+.header {
+  text-align: center;
+  padding: 20px;
+}
+.balance {
+  background: rgba(255,255,255,0.1);
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 10px;
+}
+.balance h2 {
+  color: gold;
+  margin: 0;
+}
+
+/* MINING CARD */
+.card {
+  background: rgba(255,255,255,0.12);
+  border-radius: 20px;
+  padding: 20px;
+  margin: 15px;
+}
+
+/* MINING POWER */
+.power-bars {
+  display: flex;
+  gap: 8px;
+  justify-content: center;
+  margin: 15px 0;
+}
+.bar {
+  width: 40px;
+  height: 70px;
+  border-radius: 8px;
+  background: rgba(255,255,255,0.2);
+}
+.bar.active {
+  background: #4cc9f0;
+}
+
+/* OFFERS */
+.offer {
+  display: flex;
+  align-items: center;
+  background: #8e44ad;
+  border-radius: 15px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+.offer img {
+  width: 45px;
+  height: 45px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+.offer span {
+  flex: 1;
+}
+
+/* ADMIN PANEL */
+.admin {
+  background: #240046;
+  padding: 15px;
+  border-radius: 20px;
+  margin: 15px;
+}
+.admin input {
+  width: 100%;
+  margin-bottom: 8px;
+  padding: 8px;
+  border-radius: 8px;
+  border: none;
+}
+.admin button {
+  width: 100%;
+  padding: 10px;
+  background: #4cc9f0;
+  border: none;
+  border-radius: 10px;
+  font-weight: bold;
+}
+
+/* NAV */
+.nav {
+  display: flex;
+  justify-content: space-around;
+  background: #3c096c;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+</style>
 </head>
+
 <body>
 
-  <!-- APP -->
-  <div class="app">
-
-    <!-- HEADER -->
-    <h1 class="title">FREE MATIC MINING</h1>
-
-    <!-- BALANCE -->
-    <div class="card balance-card">
-      <p class="label">Your Balance</p>
-      <h2 class="balance">0.0000 <span>MATIC</span></h2>
-    </div>
-
-    <p class="subtitle">Environmental friendly mining</p>
-
-    <!-- MINING CARD -->
-    <div class="card mining-card">
-      <div class="mining-row">
-        <div class="battery">
-          <span id="batteryLevel">0/5</span>
-        </div>
-
-        <div class="machine off">
-          <span>OFF</span>
-          ⚡
-        </div>
-      </div>
-
-      <p class="status">Mining stopped</p>
-      <p class="battery-text">Battery: 0/5 - Charge to start mining</p>
-    </div>
-
-    <!-- TOP OFFERS -->
-    <div class="card offers-card">
-      <h3>🎁 Top offers</h3>
-      <p class="offer-desc">Earn to cover withdraw fees and more.</p>
-
-      <button class="offer-btn">
-        Join the Channel
-        <span>+ 0.015 MATIC</span>
-      </button>
-
-      <button class="offer-btn">
-        Visit the Site
-        <span>+ 0.005 MATIC</span>
-      </button>
-    </div>
-
+<!-- HEADER -->
+<div class="header">
+  <h1>FREE MATIC MINING</h1>
+  <div class="balance">
+    <p>Your Balance</p>
+    <h2>0.0000 MATIC</h2>
   </div>
+  <p>Environmental friendly mining</p>
+</div>
 
-  <!-- FOOTER -->
-  <div class="footer">
-    <button class="active">🏠<br>Home</button>
-    <button>⚡<br>Mining Power</button>
-    <button>💼<br>Wallet</button>
-    <button>👥<br>Referrals</button>
-  </div>
+<!-- MINING POWER -->
+<div class="card">
+  <h3 style="text-align:center;">Mining Power</h3>
+  <div class="power-bars" id="powerBars"></div>
+  <p style="text-align:center;color:gold;">Mining stopped</p>
+</div>
 
-  <script src="script.js"></script>
+<!-- TOP OFFERS -->
+<div class="card">
+  <h3>🎁 Top Offers</h3>
+  <div id="offers"></div>
+</div>
+
+<!-- ADMIN PANEL -->
+<div class="admin">
+  <h3>🔒 Admin Panel</h3>
+  <input type="text" id="offerTitle" placeholder="Offer title">
+  <input type="text" id="offerReward" placeholder="Reward e.g +0.01 MATIC">
+  <input type="text" id="offerImage" placeholder="Image URL">
+  <button onclick="addOffer()">Add Offer</button>
+</div>
+
+<!-- NAV -->
+<div class="nav">
+  <span>Home</span>
+  <span>Mining</span>
+  <span>Wallet</span>
+  <span>Referrals</span>
+</div>
+
+<script>
+/* MINING POWER (5 rooms) */
+let power = 2; // badilisha level hapa (0–5)
+const powerBars = document.getElementById("powerBars");
+
+for (let i = 1; i <= 5; i++) {
+  const bar = document.createElement("div");
+  bar.className = "bar" + (i <= power ? " active" : "");
+  powerBars.appendChild(bar);
+}
+
+/* OFFERS STORAGE */
+let offers = JSON.parse(localStorage.getItem("offers")) || [
+  {
+    title: "Join the Channel",
+    reward: "+0.015 MATIC",
+    img: "https://cdn-icons-png.flaticon.com/512/2111/2111646.png"
+  }
+];
+
+function renderOffers() {
+  const container = document.getElementById("offers");
+  container.innerHTML = "";
+  offers.forEach((o, i) => {
+    const div = document.createElement("div");
+    div.className = "offer";
+    div.innerHTML = `
+      <img src="${o.img}">
+      <span>${o.title}<br><small>${o.reward}</small></span>
+      <button onclick="removeOffer(${i})">❌</button>
+    `;
+    container.appendChild(div);
+  });
+}
+
+function addOffer() {
+  const title = offerTitle.value;
+  const reward = offerReward.value;
+  const img = offerImage.value;
+
+  if (!title || !reward || !img) return alert("Fill all fields");
+
+  offers.push({ title, reward, img });
+  localStorage.setItem("offers", JSON.stringify(offers));
+  renderOffers();
+
+  offerTitle.value = "";
+  offerReward.value = "";
+  offerImage.value = "";
+}
+
+function removeOffer(i) {
+  offers.splice(i, 1);
+  localStorage.setItem("offers", JSON.stringify(offers));
+  renderOffers();
+}
+
+renderOffers();
+</script>
+
 </body>
 </html>
