--- a/index.html
+++ b/index.html
@@ -2,182 +2,152 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Free Polygon Miner</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Free Polygon Miner</title>
 
 <style>
 body{
   margin:0;
-  font-family: Arial, sans-serif;
-  background: linear-gradient(180deg,#4a148c,#6a1b9a);
+  font-family:system-ui, -apple-system, BlinkMacSystemFont;
+  background:linear-gradient(180deg,#4b168d,#6a2bbf);
   color:#fff;
 }
-
-/* TOP OFFERS */
-.section{
-  padding:15px;
+.container{
+  padding:16px;
+  max-width:480px;
+  margin:auto;
 }
-.section h3{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-
-.offer{
-  border-radius:16px;
-  padding:15px;
-  margin-bottom:12px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-}
-.offer.green{background:#0f9d58;}
-.offer.blue{background:#1e88e5;}
-
-.offer small{opacity:.8}
-
-.offer button{
-  background:#fff;
-  border:none;
-  padding:6px 14px;
-  border-radius:12px;
-  font-weight:bold;
-}
-
-/* ADMIN PANEL */
-.admin-panel{
-  background:#2d004d;
-  padding:15px;
+.card{
+  background:rgba(255,255,255,0.08);
   border-radius:18px;
-  margin:15px;
+  padding:16px;
+  margin-bottom:16px;
 }
-.admin-panel input{
-  width:100%;
-  margin-bottom:8px;
-  padding:8px;
+.balance{
+  font-size:34px;
+  font-weight:700;
+  color:#ffd84d;
+}
+.mining-power{
+  display:flex;
+  gap:8px;
+}
+.power{
+  flex:1;
+  background:#2ecc71;
   border-radius:10px;
-  border:none;
+  padding:14px 0;
+  text-align:center;
 }
-.admin-panel button{
+.start-btn{
   width:100%;
-  padding:10px;
+  background:linear-gradient(90deg,#ffcc00,#ff8800);
   border:none;
-  border-radius:12px;
-  background:#ffb703;
-  font-weight:bold;
+  padding:14px;
+  border-radius:14px;
+  font-size:18px;
+  font-weight:700;
 }
-.remove-btn{
-  background:#ff4d4d;
+.offer{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:rgba(255,255,255,0.12);
+  padding:12px;
+  border-radius:14px;
+  margin-bottom:10px;
+}
+.offer button{
+  background:#2ecc71;
+  border:none;
+  padding:8px 14px;
+  border-radius:10px;
   color:#fff;
-  border:none;
-  border-radius:10px;
-  padding:5px 10px;
-  margin-left:8px;
 }
+.footer{
+  display:flex;
+  justify-content:space-around;
+  position:fixed;
+  bottom:0;
+  left:0;
+  right:0;
+  background:#3a0d6f;
+  padding:10px 0;
+}
+.footer span{font-size:12px;}
 </style>
 </head>
 
 <body>
+<div class="container">
 
-<!-- ===== TOP OFFERS (USER VIEW) ===== -->
-<div class="section">
-  <h3>🎁 Top Offers <span style="opacity:.7">Earn Extra MATIC</span></h3>
-  <div id="offersList"></div>
+  <!-- BALANCE -->
+  <div class="card">
+    <div>Your Balance</div>
+    <div class="balance" id="balance">0.00000 MATIC</div>
+  </div>
+
+  <!-- MINING POWER -->
+  <div class="card">
+    <div style="margin-bottom:8px;">Mining Power (5/5)</div>
+    <div class="mining-power">
+      <div class="power">⚡</div>
+      <div class="power">⚡</div>
+      <div class="power">⚡</div>
+      <div class="power">⚡</div>
+      <div class="power">⚡</div>
+    </div>
+  </div>
+
+  <!-- START MINING -->
+  <div class="card">
+    <h3>Ready to Mine</h3>
+    <p>Tap to start mining</p>
+    <button class="start-btn">Start Mining</button>
+  </div>
+
+  <!-- TOP OFFERS -->
+  <div class="card">
+    <h3>🎁 Top Offers</h3>
+    <div id="offers"></div>
+  </div>
+
 </div>
 
-<!-- ===== ADMIN PANEL (ADMIN ONLY) ===== -->
-<div class="admin-panel" id="adminPanel" style="display:none;">
-  <h3>🔒 Admin – Manage Offers</h3>
-
-  <input id="name" placeholder="Offer name">
-  <input id="desc" placeholder="Offer description">
-  <input id="reward" placeholder="Reward e.g +0.001 MATIC">
-  <input id="link" placeholder="Redirect link (https://...)">
-
-  <button onclick="addOffer()">Add Offer</button>
+<!-- FOOTER -->
+<div class="footer">
+  <span>Home</span>
+  <span>Mining</span>
+  <span>Wallet</span>
+  <span>Referrals</span>
 </div>
 
 <script>
-/* ========= ADMIN CHECK ========= */
-const IS_ADMIN = true; // badilisha false kwa user wa kawaida
+let offers = JSON.parse(localStorage.getItem("offers")) || [];
 
-if(IS_ADMIN){
-  document.getElementById("adminPanel").style.display = "block";
-}
-
-/* ========= OFFERS DATA ========= */
-let offers = JSON.parse(localStorage.getItem("offers")) || [
-  {
-    name:"Join Telegram",
-    desc:"Connect with community",
-    reward:"+0.001 MATIC",
-    link:"https://t.me/",
-    color:"green"
-  },
-  {
-    name:"Visit Site",
-    desc:"Complete quick task",
-    reward:"+0.0008 MATIC",
-    link:"https://example.com",
-    color:"blue"
-  }
-];
+const offersDiv = document.getElementById("offers");
 
 function renderOffers(){
-  const box = document.getElementById("offersList");
-  box.innerHTML = "";
-
-  offers.forEach((o,i)=>{
+  offersDiv.innerHTML = "";
+  offers.forEach(o=>{
     const div = document.createElement("div");
-    div.className = "offer "+o.color;
-    div.innerHTML = `
+    div.className="offer";
+    div.innerHTML=`
       <div>
         <strong>${o.name}</strong><br>
-        <small>${o.desc}</small>
+        <small>${o.reward}</small>
       </div>
-      <div>
-        <strong>${o.reward}</strong><br>
-        <button onclick="openOffer('${o.link}')">Claim</button>
-        ${IS_ADMIN ? `<button class="remove-btn" onclick="removeOffer(${i})">X</button>` : ``}
-      </div>
+      <button onclick="goOffer('${o.link}')">Start</button>
     `;
-    box.appendChild(div);
+    offersDiv.appendChild(div);
   });
-
-  localStorage.setItem("offers",JSON.stringify(offers));
 }
 
-function openOffer(link){
+function goOffer(link){
   window.open(link,"_blank");
-}
-
-function addOffer(){
-  const name = document.getElementById("name").value;
-  const desc = document.getElementById("desc").value;
-  const reward = document.getElementById("reward").value;
-  const link = document.getElementById("link").value;
-
-  if(!name || !desc || !reward || !link){
-    alert("Fill all fields");
-    return;
-  }
-
-  offers.push({
-    name, desc, reward, link,
-    color: offers.length % 2 === 0 ? "green" : "blue"
-  });
-
-  document.querySelectorAll(".admin-panel input").forEach(i=>i.value="");
-  renderOffers();
-}
-
-function removeOffer(i){
-  offers.splice(i,1);
-  renderOffers();
 }
 
 renderOffers();
 </script>
-
 </body>
-</html>
+    </html>
