--- a/admin.html
+++ b/admin.html
@@ -3,8 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Panel</title>
-
+<title>Admin Panel - Free Polygon Miner</title>
 <style>
 body{
   margin:0;
@@ -13,107 +12,125 @@ body{
   color:#fff;
 }
 .container{
-  padding:15px;
+  padding:20px;
+  max-width:500px;
+  margin:auto;
 }
-input{
+h2{text-align:center; margin-bottom:20px;}
+input,button{
   width:100%;
   padding:10px;
   margin-bottom:10px;
   border-radius:6px;
   border:none;
+  font-size:16px;
 }
-button{
-  padding:10px;
-  width:100%;
-  background:#4caf50;
-  border:none;
-  color:#fff;
-  border-radius:6px;
-  cursor:pointer;
-}
+input{background:#1c2240; color:#fff;}
+button{background:#4caf50; color:#fff; cursor:pointer;}
 .offer{
-  background:#1c2240;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  background:#151a2e;
   padding:10px;
-  border-radius:8px;
-  margin-top:10px;
+  border-radius:6px;
+  margin-bottom:10px;
 }
-.remove{
-  background:#e53935;
-  margin-top:8px;
+.offer img{
+  width:30px;
+  height:30px;
+  object-fit:cover;
+  border-radius:4px;
+  margin-right:8px;
+}
+.offer-details{
+  flex:1;
+}
+.remove-btn{
+  background:#e74c3c;
+  padding:5px 10px;
+  border-radius:4px;
+  cursor:pointer;
 }
 </style>
 </head>
-
 <body>
-
 <div class="container">
-  <h2>ADMIN – OFFERS PANEL</h2>
+  <h2>Admin Panel - Offers</h2>
 
-  <input id="name" placeholder="Offer name">
-  <input id="desc" placeholder="Offer description">
-  <input id="reward" placeholder="Reward (e.g 0.05 MATIC)">
-  <input id="link" placeholder="Offer redirect link">
-
+  <!-- ADD OFFER -->
+  <input type="text" id="offerName" placeholder="Offer Name">
+  <input type="text" id="offerReward" placeholder="Reward (e.g., 0.05 MATIC)">
+  <input type="text" id="offerLink" placeholder="Offer Link">
+  <input type="text" id="offerLogo" placeholder="Logo URL">
   <button onclick="addOffer()">Add Offer</button>
 
-  <h3 style="margin-top:20px;">Existing Offers</h3>
-  <div id="list"></div>
+  <hr style="border:1px solid #222; margin:20px 0;">
+
+  <!-- EXISTING OFFERS -->
+  <div id="offersList"></div>
 </div>
 
 <script>
+// Only admin should access this page
+// Offers stored in localStorage
 let offers = JSON.parse(localStorage.getItem("offers")) || [];
-const list = document.getElementById("list");
 
-function render(){
-  list.innerHTML = "";
-  offers.forEach((o,i)=>{
+function renderOffers(){
+  const offersList = document.getElementById("offersList");
+  offersList.innerHTML = "";
+  if(offers.length===0){
+    offersList.innerHTML="<p>No offers yet</p>";
+    return;
+  }
+  offers.forEach((o, index)=>{
     const div = document.createElement("div");
     div.className="offer";
     div.innerHTML=`
-      <strong>${o.name}</strong><br>
-      <small>${o.desc}</small><br>
-      <small>${o.reward}</small>
-      <button class="remove" onclick="removeOffer(${i})">
-        Remove Offer
-      </button>
+      <img src="${o.logo}" alt="logo">
+      <div class="offer-details">
+        <strong>${o.name}</strong><br>
+        <small>${o.reward}</small><br>
+        <small>${o.link}</small>
+      </div>
+      <button class="remove-btn" onclick="removeOffer(${index})">Remove</button>
     `;
-    list.appendChild(div);
+    offersList.appendChild(div);
   });
 }
 
 function addOffer(){
-  if(!name.value || !reward.value || !link.value){
-    alert("Fill all required fields");
+  const name = document.getElementById("offerName").value.trim();
+  const reward = document.getElementById("offerReward").value.trim();
+  const link = document.getElementById("offerLink").value.trim();
+  const logo = document.getElementById("offerLogo").value.trim();
+
+  if(!name || !reward || !link || !logo){
+    alert("Please fill all fields");
     return;
   }
 
-  offers.push({
-    name: name.value.trim(),
-    desc: desc.value.trim(),
-    reward: reward.value.trim(),
-    link: link.value.trim()
-  });
-
+  offers.push({name,reward,link,logo});
   localStorage.setItem("offers", JSON.stringify(offers));
+  renderOffers();
 
-  name.value="";
-  desc.value="";
-  reward.value="";
-  link.value="";
-
-  render();
+  // clear input fields
+  document.getElementById("offerName").value="";
+  document.getElementById("offerReward").value="";
+  document.getElementById("offerLink").value="";
+  document.getElementById("offerLogo").value="";
 }
 
-function removeOffer(i){
+function removeOffer(index){
   if(confirm("Are you sure you want to remove this offer?")){
-    offers.splice(i,1);
+    offers.splice(index,1);
     localStorage.setItem("offers", JSON.stringify(offers));
-    render();
+    renderOffers();
   }
 }
 
-render();
+// initial render
+renderOffers();
 </script>
-
 </body>
 </html>
