--- a/admin.html
+++ b/admin.html
@@ -36,13 +36,6 @@ button{background:#4caf50; color:#fff; cursor:pointer;}
   border-radius:6px;
   margin-bottom:10px;
 }
-.offer img{
-  width:30px;
-  height:30px;
-  object-fit:cover;
-  border-radius:4px;
-  margin-right:8px;
-}
 .offer-details{
   flex:1;
 }
@@ -62,7 +55,6 @@ button{background:#4caf50; color:#fff; cursor:pointer;}
   <input type="text" id="offerName" placeholder="Offer Name">
   <input type="text" id="offerReward" placeholder="Reward (e.g., 0.05 MATIC)">
   <input type="text" id="offerLink" placeholder="Offer Link">
-  <input type="text" id="offerLogo" placeholder="Logo URL">
   <button onclick="addOffer()">Add Offer</button>
 
   <hr style="border:1px solid #222; margin:20px 0;">
@@ -72,8 +64,6 @@ button{background:#4caf50; color:#fff; cursor:pointer;}
 </div>
 
 <script>
-// Only admin should access this page
-// Offers stored in localStorage
 let offers = JSON.parse(localStorage.getItem("offers")) || [];
 
 function renderOffers(){
@@ -87,7 +77,6 @@ function renderOffers(){
     const div = document.createElement("div");
     div.className="offer";
     div.innerHTML=`
-      <img src="${o.logo}" alt="logo">
       <div class="offer-details">
         <strong>${o.name}</strong><br>
         <small>${o.reward}</small><br>
@@ -103,14 +92,13 @@ function addOffer(){
   const name = document.getElementById("offerName").value.trim();
   const reward = document.getElementById("offerReward").value.trim();
   const link = document.getElementById("offerLink").value.trim();
-  const logo = document.getElementById("offerLogo").value.trim();
 
-  if(!name || !reward || !link || !logo){
+  if(!name || !reward || !link){
     alert("Please fill all fields");
     return;
   }
 
-  offers.push({name,reward,link,logo});
+  offers.push({name,reward,link});
   localStorage.setItem("offers", JSON.stringify(offers));
   renderOffers();
 
@@ -118,15 +106,13 @@ function addOffer(){
   document.getElementById("offerName").value="";
   document.getElementById("offerReward").value="";
   document.getElementById("offerLink").value="";
-  document.getElementById("offerLogo").value="";
 }
 
 function removeOffer(index){
-  if(confirm("Are you sure you want to remove this offer?")){
-    offers.splice(index,1);
-    localStorage.setItem("offers", JSON.stringify(offers));
-    renderOffers();
-  }
+  // directly remove without confirmation
+  offers.splice(index,1);
+  localStorage.setItem("offers", JSON.stringify(offers));
+  renderOffers();
 }
 
 // initial render
