--- a/referrals.html
+++ b/referrals.html
@@ -59,6 +59,11 @@ input{
   padding:8px;
   border-bottom:1px solid rgba(255,255,255,0.2);
 }
+.reward-info{
+  margin-bottom:10px;
+  color:#ffd84d;
+  font-weight:700;
+}
 </style>
 </head>
 <body>
@@ -69,6 +74,7 @@ input{
 
   <div class="card">
     <h3>Your Referral Link</h3>
+    <div class="reward-info">Each referral joining via your link earns you 0.05 MATIC</div>
     <input type="text" id="refLink" readonly>
     <button id="copyBtn">Copy Link</button>
   </div>
@@ -102,18 +108,18 @@ document.getElementById("copyBtn").addEventListener("click",()=>{
   alert("Referral link copied!");
 });
 
-// Simulated referral leaderboard
+// Simulated referral leaderboard with count
 let leaderboard = JSON.parse(localStorage.getItem("leaderboard")) || [
-  {telegramId:"1001",reward:10},
-  {telegramId:"1002",reward:5},
-  {telegramId:"1003",reward:3},
-  {telegramId:"1004",reward:2},
-  {telegramId:"1005",reward:1},
-  {telegramId:"1006",reward:1},
-  {telegramId:"1007",reward:1},
-  {telegramId:"1008",reward:1},
-  {telegramId:"1009",reward:1},
-  {telegramId:"1010",reward:1},
+  {telegramId:"1001",referrals:20,reward:10},
+  {telegramId:"1002",referrals:15,reward:5},
+  {telegramId:"1003",referrals:10,reward:3},
+  {telegramId:"1004",referrals:8,reward:2},
+  {telegramId:"1005",referrals:5,reward:1},
+  {telegramId:"1006",referrals:3,reward:1},
+  {telegramId:"1007",referrals:2,reward:1},
+  {telegramId:"1008",referrals:1,reward:1},
+  {telegramId:"1009",referrals:1,reward:1},
+  {telegramId:"1010",referrals:1,reward:1},
 ];
 
 const lbDiv = document.getElementById("leaderboard");
@@ -121,7 +127,7 @@ function renderLeaderboard(){
   lbDiv.innerHTML="";
   leaderboard.forEach((u,i)=>{
     const div = document.createElement("div");
-    div.innerHTML = `${i+1}. ${u.telegramId} - ${u.reward} MATIC`;
+    div.innerHTML = `${i+1}. ${u.telegramId} - ${u.reward} MATIC - Referrals: ${u.referrals}`;
     lbDiv.appendChild(div);
   });
 }
@@ -131,10 +137,13 @@ renderLeaderboard();
 function addReferral(newId){
   const exists = leaderboard.find(u=>u.telegramId===newId);
   if(!exists){
-    leaderboard.push({telegramId:newId,reward:0.05});
-    localStorage.setItem("leaderboard",JSON.stringify(leaderboard));
-    renderLeaderboard();
+    leaderboard.push({telegramId:newId,referrals:1,reward:0.05});
+  } else {
+    exists.referrals += 1;
+    exists.reward += 0.05;
   }
+  localStorage.setItem("leaderboard",JSON.stringify(leaderboard));
+  renderLeaderboard();
 }
 </script>
 
