--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@ body{
 
 <!-- FOOTER -->
 <div class="footer">
-  <div>🏠<br>Home</div>
-  <div>⚡<br>Mining</div>
-  <div>💼<br>Wallet</div>
-  <div>👥<br>Referrals</div>
+  <div id="btnHome">🏠<br>Home</div>
+  <div id="btnMining">⚡<br>Mining</div>
+  <div id="btnWallet">💼<br>Wallet</div>
+  <div id="btnReferrals">👥<br>Referrals</div>
 </div>
 
 <script>
@@ -181,7 +181,13 @@ function goOffer(link){
 }
 
 renderOffers();
+
+// Footer navigation
+document.getElementById("btnHome").addEventListener("click",()=>{window.location.href="index.html";});
+document.getElementById("btnMining").addEventListener("click",()=>{window.location.href="power.html";});
+document.getElementById("btnWallet").addEventListener("click",()=>{window.location.href="wallet.html";});
+document.getElementById("btnReferrals").addEventListener("click",()=>{window.location.href="referrals.html";});
 </script>
 
 </body>
-  </html>
+</html>
