--- a/power.html
+++ b/power.html
@@ -96,10 +96,10 @@ body{
 
 <!-- FOOTER -->
 <div class="footer">
-  <div>🏠<br>Home</div>
-  <div>⚡<br>Mining</div>
-  <div>💼<br>Wallet</div>
-  <div>👥<br>Referrals</div>
+  <div id="btnHome">🏠<br>Home</div>
+  <div id="btnMining">⚡<br>Mining</div>
+  <div id="btnWallet">💼<br>Wallet</div>
+  <div id="btnReferrals">👥<br>Referrals</div>
 </div>
 
 <script>
@@ -113,6 +113,12 @@ document.getElementById("recharge1").addEventListener("click",()=>{window.open("
 document.getElementById("recharge2").addEventListener("click",()=>{window.open("https://short.link/2","_blank");});
 document.getElementById("recharge3").addEventListener("click",()=>{window.open("https://short.link/3","_blank");});
 document.getElementById("recharge4").addEventListener("click",()=>{window.open("https://short.link/4","_blank");});
+
+// Footer navigation
+document.getElementById("btnHome").addEventListener("click",()=>{window.location.href="index.html";});
+document.getElementById("btnMining").addEventListener("click",()=>{window.location.href="power.html";});
+document.getElementById("btnWallet").addEventListener("click",()=>{window.location.href="wallet.html";});
+document.getElementById("btnReferrals").addEventListener("click",()=>{window.location.href="referrals.html";});
 </script>
 
 </body>
