--- a/wallet.html
+++ b/wallet.html
@@ -135,9 +135,22 @@ withdrawBtn.addEventListener("click",()=>{
   Email: ${email}`;
 
   // Placeholder for FaucetPay API integration
-  alert("Withdraw request ready. Integrate with FaucetPay API to process.");
+  fetch("withdraw.php", {
+  method: "POST",
+  headers: {"Content-Type":"application/x-www-form-urlencoded"},
+  body: `email=${encodeURIComponent(email)}&amount=${amount}`
+})
+.then(res=>res.json())
+.then(data=>{
+  if(data.status === 200 || data.success){
+    alert("Withdraw sent successfully!");
+  } else {
+    alert("Withdraw failed: " + (data.message || "Error"));
+  }
+})
+.catch(()=>{
+  alert("Server error. Try again later.");
 });
-
 // Footer navigation
 document.getElementById("btnHome").addEventListener("click",()=>{window.location.href="index.html";});
 document.getElementById("btnMining").addEventListener("click",()=>{window.location.href="power.html";});
