--- a/wallet.html
+++ b/wallet.html
@@ -152,10 +152,14 @@ withdrawBtn.addEventListener("click",()=>{
   alert("Server error. Try again later.");
 });
 // Footer navigation
-document.getElementById("btnHome").addEventListener("click",()=>{window.location.href="index.html";});
-document.getElementById("btnMining").addEventListener("click",()=>{window.location.href="power.html";});
-document.getElementById("btnWallet").addEventListener("click",()=>{window.location.href="wallet.html";});
-document.getElementById("btnReferrals").addEventListener("click",()=>{window.location.href="referrals.html";});
+function goPage(page){
+  window.location.href = page;
+}
+
+document.querySelectorAll('.footer div').forEach((el,i)=>{
+  const pages = ['index.html','power.html','wallet.html','referrals.html'];
+  el.addEventListener('click',()=>goPage(pages[i]));
+});
 </script>
 
 </body>
