--- a/wallet.html
+++ b/wallet.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Wallet</title>
+
 <style>
 body{
   margin:0;
@@ -11,6 +12,7 @@ body{
   background:linear-gradient(180deg,#4b168d,#6a2bbf);
   color:#fff;
 }
+
 .header{
   position:fixed;
   top:0;
@@ -22,18 +24,22 @@ body{
   font-weight:700;
   z-index:1000;
 }
+
 .container{
   padding:16px;
   padding-top:64px;
+  padding-bottom:90px; /* ✅ FIX: space for footer */
   max-width:480px;
   margin:auto;
 }
+
 .card{
   background:rgba(255,255,255,0.08);
   border-radius:18px;
   padding:16px;
   margin-bottom:16px;
 }
+
 input, button{
   width:100%;
   padding:12px;
@@ -42,11 +48,13 @@ input, button{
   margin-top:8px;
   font-size:16px;
 }
+
 button{
   background:linear-gradient(90deg,#ffcc00,#ff8800);
   font-weight:700;
   cursor:pointer;
 }
+
 .footer{
   display:flex;
   justify-content:space-around;
@@ -56,13 +64,19 @@ button{
   right:0;
   background:#3a0d6f;
   padding:10px 0;
+  z-index:1000;
 }
+
 .footer div{
   text-align:center;
   font-size:12px;
+  cursor:pointer;                 /* ✅ FIX */
+  user-select:none;               /* ✅ FIX */
+  touch-action:manipulation;      /* ✅ FIX */
 }
 </style>
 </head>
+
 <body>
 
 <div class="header">Wallet</div>
@@ -73,7 +87,9 @@ button{
     <h3>FaucetPay Email</h3>
     <input type="email" id="faucetEmail" placeholder="Enter your FaucetPay email">
     <button id="saveEmail">Save Email</button>
-    <small style="color:#9cff9c;">This email will be used for withdrawals only for your account.</small>
+    <small style="color:#9cff9c;">
+      This email will be used for withdrawals only for your account.
+    </small>
   </div>
 
   <div class="card">
@@ -99,7 +115,7 @@ const withdrawAmountInput = document.getElementById("withdrawAmount");
 const withdrawBtn = document.getElementById("withdrawBtn");
 const withdrawInfo = document.getElementById("withdrawInfo");
 
-// Save FaucetPay email locally (for this user only)
+// Save FaucetPay email
 saveEmailBtn.addEventListener("click",()=>{
   const email = faucetEmailInput.value.trim();
   if(!email){
@@ -117,49 +133,48 @@ withdrawBtn.addEventListener("click",()=>{
     alert("Please save your FaucetPay email first.");
     return;
   }
+
   const amount = parseFloat(withdrawAmountInput.value);
   if(isNaN(amount) || amount < 0.2){
     alert("Minimum withdraw is 0.2 MATIC");
     return;
   }
+
   const faucetFee = 0.03;
   const managementFee = amount * 0.1;
-  const totalDeduction = faucetFee + managementFee;
-  const received = amount - totalDeduction;
-  
-  withdrawInfo.innerText = `Withdraw Details:
-  Amount: ${amount} MATIC
-  FaucetPay Fee: ${faucetFee} MATIC
-  Management Fee: ${managementFee.toFixed(2)} MATIC
-  You will receive: ${received.toFixed(2)} MATIC
-  Email: ${email}`;
+  const received = amount - (faucetFee + managementFee);
 
-  // Placeholder for FaucetPay API integration
-  fetch("withdraw.php", {
-  method: "POST",
-  headers: {"Content-Type":"application/x-www-form-urlencoded"},
-  body: `email=${encodeURIComponent(email)}&amount=${amount}`
-})
-.then(res=>res.json())
-.then(data=>{
-  if(data.status === 200 || data.success){
-    alert("Withdraw sent successfully!");
-  } else {
-    alert("Withdraw failed: " + (data.message || "Error"));
-  }
-})
-.catch(()=>{
-  alert("Server error. Try again later.");
-});
-// Footer navigation
-function goPage(page){
-  window.location.href = page;
-}
+  withdrawInfo.innerText =
+`Withdraw Details:
+Amount: ${amount} MATIC
+FaucetPay Fee: ${faucetFee} MATIC
+Management Fee: ${managementFee.toFixed(2)} MATIC
+You will receive: ${received.toFixed(2)} MATIC
+Email: ${email}`;
 
-document.querySelectorAll('.footer div').forEach((el,i)=>{
-  const pages = ['index.html','power.html','wallet.html','referrals.html'];
-  el.addEventListener('click',()=>goPage(pages[i]));
+  fetch("withdraw.php",{
+    method:"POST",
+    headers:{"Content-Type":"application/x-www-form-urlencoded"},
+    body:`email=${encodeURIComponent(email)}&amount=${amount}`
+  })
+  .then(res=>res.json())
+  .then(data=>{
+    if(data.status === 200 || data.success){
+      alert("Withdraw sent successfully!");
+    }else{
+      alert("Withdraw failed");
+    }
+  })
+  .catch(()=>{
+    alert("Server error. Try again later.");
+  });
 });
+
+/* ✅ FIXED FOOTER NAVIGATION (explicit) */
+document.getElementById("btnHome").onclick = ()=>location.href="index.html";
+document.getElementById("btnMining").onclick = ()=>location.href="power.html";
+document.getElementById("btnWallet").onclick = ()=>location.href="wallet.html";
+document.getElementById("btnReferrals").onclick = ()=>location.href="referrals.html";
 </script>
 
 </body>
